# stock_agent

./: .dockerignore  .env.example  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
agent/: fundamental_agent.py  news_agent.py  stock_manager_agent.py  technical_agent.py
app/: main.py
app/agent/: investment_agent.py  stock_manager_agent.py  stock_query_agent.py
app/examples/: stock_data_demo.py  stock_news_demo.py  stock_symbol_demo.py
app/stock/: stock_data.py  stock_news.py  stock_symbol.py
examples/: stock_news_demo.py
stock/: stock_data.py  stock_news.py  stock_symbol.py
tests/: __init__.py  test_agents.py  test_main.py  test_stock_data.py  test_stock_news.py  test_stock_symbol.py
